--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
@@ -28,6 +29,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "typescript": "~4.3.5"
   },
   "private": true
