--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-leaflet": "^3.2.5",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-maps": "0.28.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
