--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "python fix.py"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.8.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
