--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.2"
+    "react-router": "^6.0.2",
+    "expo-location": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
