--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@react-native-community/picker": "^1.8.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-location": "~13.0.4",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,8 +29,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
-    "expo-location": "~13.0.4"
+    "react-router": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
