--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2"
   },
